--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ html{height: 100%;}
   <div class="container">
   
     <div class="topnav">
-      <a href="adminlogin.php" class="button" target="_parent">ADMIN LOGIN</a>
+      <a href="https://sivasai98.github.io/wtproject/adminlogin.php" class="button" target="_parent">ADMIN LOGIN</a>
       <a href="facultylogin.php" class="button" target="_parent">FACULTY LOGIN</a>
       <a href="studentlogin.php" class="button" target="_parent">STUDENT LOGIN</a>
       <a href="ac.pdf" target="_parent">ACADEMIC CALENDER</a>
